--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,8 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Test</title>
+		<title>SF Product Labs</title>
 	</head>
-	<body>
-		<h1>Test</h1>
+	<body>		
 	</body>
 </html>
