--- a/public/shorten_url.html
+++ b/public/shorten_url.html
@@ -291,7 +291,11 @@
 
 <body>
     <script>
-        
+        function onConfirm() { 
+            console.warn("Confirmed")            
+            return false;
+        }
+
         function onSubmit(e) { 
             e.preventDefault();  
             document.getElementById("submitted").checked = true;           
@@ -328,6 +332,7 @@
             
             document.getElementById("link").innerHTML =  ""; //`&url=${encodeURIComponent(document.getElementById("url").value + (document.getElementById("hideqp").checked ? "" : "?gu=1" + link))}`;
             document.getElementById("link").href = link;
+            console.log("Checking")
 
         }
 
@@ -392,8 +397,8 @@
             <li>
                     <input id="submitted" type="checkbox" style="display: none;"/>
                     <p id="errors" class="required"></p>
+                    <input id="shorten" type="button" style="display: none;" value="Confirm" onclick="onConfirm();" />
                     <p><a id="link" href="link" style="display: none;"></a></p>
-                    <input id="shorten" type="button" style="display: none;" value="Confirm" />
             </li>
         </ul>
         <input id="ref" type="hidden" />
