--- a/public/shorten_url.html
+++ b/public/shorten_url.html
@@ -286,13 +286,56 @@
             if (value)
                 return encodeURIComponent(value.replace(/( )/ig, "_").replace(/[^a-zA-Z0-9_]/g, "").toLowerCase());
         }
+
+        function getJSON (url, callback) {
+            var xhr = new XMLHttpRequest();
+            xhr.open('GET', url, true);
+            xhr.responseType = 'json';
+            xhr.onload = function() {
+              var status = xhr.status;
+              if (status === 200) {
+                callback(null, xhr.response);
+              } else {
+                callback(status, xhr.response);
+              }
+            };
+            xhr.send();
+          }
+
+          function getRootUrl(url) {
+            return url.toString().replace(/^(.*\/\/[^\/?#]*).*$/,"$1");
+          }
+
+          function getHost(url) {
+              return getRootUrl(url).replace(/.*\/\/(.*)/,"$1")
+          }
     </script>
 </head>
 
 <body>
     <script>
         function onConfirm() { 
-            console.warn("Confirmed")            
+            const url = `https://${document.getElementById("redirector").value}/rpi/v1/redirect/${document.getElementById("uid").value}/${document.getElementById("key").value}`;
+            var el = document.createElement('a');
+            el.href = document.getElementById("url").value;
+            console.log(el, el.host, el.path, el.search)
+            fetch(url, {
+                method : "POST",                    
+                 body : JSON.stringify({
+                     urlfrom : `https://${document.getElementById("redirector").value}${document.getElementById("path").value}`,
+                     hostfrom : document.getElementById("redirector").value,
+                     slugfrom : document.getElementById("path").value,
+                     urlto : document.getElementById("url").value,
+                     hostto : el.host,
+                     pathto : el.pathname,
+                     searchto : el.search,
+                 })
+            }).then(
+                response => response.text() // .json(), etc.
+                // same as function(response) {return response.text();}
+            ).then(
+                html => console.log(html)
+            );   
             return false;
         }
 
@@ -332,7 +375,26 @@
             
             document.getElementById("link").innerHTML =  ""; //`&url=${encodeURIComponent(document.getElementById("url").value + (document.getElementById("hideqp").checked ? "" : "?gu=1" + link))}`;
             document.getElementById("link").href = link;
-            console.log("Checking")
+            getJSON(`https://${document.getElementById("redirector").value}/rpi/v1/redirects/${document.getElementById("uid").value}/${document.getElementById("key").value}/${encodeURIComponent(getHost(document.getElementById("url").value))}`, function (status, response) {
+                if (status) {
+                    console.error(status, response)
+                    alert('Could not connect to redirect server.')
+                    return;
+                }
+                if (response.results && response.results.length) {
+                    let table = document.getElementById("redirects");
+                    for (i = 1; i < (table.rows.length - 1); i++) {
+                        document.getElementById("redirects").deleteRow(1);
+                    }
+                    table.style.display = "";
+                    var row = table.insertRow(1);
+                    var cell1 = row.insertCell(0);
+                    var cell2 = row.insertCell(1);
+                    cell1.innerHTML = "NEW CELL1";
+                    cell2.innerHTML = "NEW CELL2";
+                    console.log(response.results)
+                }
+            });
 
         }
 
@@ -368,16 +430,16 @@
                 <p>Only letters, numbers and _ are accepted characters for all values except URL and the redirect server. These values will be auto-corrected.</small></p>
             </li>
             <li>
-                <label>Redirect Server URL<span class="required">*</span></label>
+                <label>Redirect From (Server)<span class="required">*</span></label>
                 <input id="redirector" placeholder="Ex. tr.example.com" type="text" onchange="onChangeRedirector()" class="field-long"/>
             </li>  
             <li>
-                <label>Shortened Path<span class="required">*</span></label>
+                <label>Redirect From Path (Shortened)<span class="required">*</span></label>
                 <input id="path" type="text" class="field-divided" placeholder="Ex. /tv"/>                
             </li>     
             <li>
-                <label>Original Url<span class="required">*</span></label>
-                <input id="url" type="text" class="field-long"/>
+                <label>Redirect To (URL)<span class="required">*</span></label>
+                <input id="url" type="text" placeholder="Ex. https://nytimes.com/article1?sa=ff" class="field-long"/>
             </li>  
             <li>
                 <h4 class="advanced">Admin Options:</h4>
@@ -397,8 +459,15 @@
             <li>
                     <input id="submitted" type="checkbox" style="display: none;"/>
                     <p id="errors" class="required"></p>
+                    <table id="redirects" style="display: none;">
+                        <tr>
+                            <th>From</th>
+                            <th>To</th>
+                        </tr>                        
+                    </table>
                     <input id="shorten" type="button" style="display: none;" value="Confirm" onclick="onConfirm();" />
                     <p><a id="link" href="link" style="display: none;"></a></p>
+                    
             </li>
         </ul>
         <input id="ref" type="hidden" />
