--- a/public/shorten_url.html
+++ b/public/shorten_url.html
@@ -481,7 +481,8 @@
             </li>  
             <li>
                 <label>Redirect From Path (Shortened)<span class="required">*</span></label>
-                <input id="path" type="text" class="field-divided" placeholder="Ex. /tv"/>                
+                <input id="path" type="text" class="field-divided" placeholder="Ex. /tv"/>
+                <p>Refresh if you'd like to auto-generate something else.</p>                
             </li>     
             <li>
                 <label>Redirect To (URL)<span class="required">*</span></label>
