--- a/public/shorten_url.html
+++ b/public/shorten_url.html
@@ -350,7 +350,7 @@
 <body>
     <script>
         function onConfirm() { 
-            const url = `https://${document.getElementById("redirector").value}/rpi/v1/redirect/${document.getElementById("uid").value}/${document.getElementById("key").value}`;
+            const url = `https://${document.getElementById("redirector").value}/v1/rpi/redirect/${document.getElementById("uid").value}/${document.getElementById("key").value}`;
             var el = document.createElement('a');
             el.href = document.getElementById("url").value;
             var link = `https://${document.getElementById("redirector").value}${document.getElementById("path").value}`;
@@ -420,7 +420,7 @@
             
             document.getElementById("link").innerHTML =  ""; //`&url=${encodeURIComponent(document.getElementById("url").value + (document.getElementById("hideqp").checked ? "" : "?gu=1" + link))}`;
             document.getElementById("link").href = link;
-            getJSON(`https://${document.getElementById("redirector").value}/rpi/v1/redirects/${document.getElementById("uid").value}/${document.getElementById("key").value}/${encodeURIComponent(getHost(document.getElementById("url").value))}`, function (status, response) {
+            getJSON(`https://${document.getElementById("redirector").value}/v1/rpi/redirects/${document.getElementById("uid").value}/${document.getElementById("key").value}/${encodeURIComponent(getHost(document.getElementById("url").value))}`, function (status, response) {
                 if (status) {
                     console.error(status, response)
                     alert('Could not connect to redirect server.')
